--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   width: 80%;
 
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 }
@@ -83,7 +83,7 @@
 
 .tableDiv{
   border: 1px solid red;
-  width: 85%;
+  width: 100%;
 }
 
 .btn{
